--- a/css/index.css
+++ b/css/index.css
@@ -86,6 +86,7 @@ main{
     width: 100%;
     background-color: white;
     background-image: url("https://www.transparenttextures.com/patterns/asfalt-dark.png");
+    border-radius: 20px;
 }
 
 .revision h3{
